2011-03-08 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Small bugfix for view icon on TYPO3 4.3
    * Add a filter to filter by content in the "List of used content" view
    * Bugfix : EM link was broken
2011-02-28 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Small bugfix for icons (not displayed if you have your TYPO3 installation in a subfolder).
2011-02-11 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a new view to display the available BE ajax methods
2011-02-09 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a filter to filter by plugins in the "List of used plugins" view
2011-02-05 CERDAN Yohann <cerdanyohann@yahoo.fr>
    * Add a typo3 page brower on the "List of used content types & "List of used plugins" view
    * Check if the content/plugin is used in TV (non used elements)
    * Use the jumpurl method instead of teh submit button
    * Save the last menu you use (in the plugins section)
2011-01-03 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add a link to the page module & page TV module (if TV is loaded) in the table
2010-12-27 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Bugfix : can't get the mysql informations in some server
	* Bugfix : correct link to the EM
2010-12-23 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Bugfix : test if the apache_get_version function exist
2010-10-10 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Add hook support (need feedbacks about it)
	* Add a status module (with informations about typo3,php,apache,mysql,crontab...)
	* Update the locallang
	* Refactoring HTML & PHP code
	* Update the manual with new screenshots
2010-10-05 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Update the locallang
	* Update the manual
	* Add a new option 'Summary' in the 'plugins & content type' module
2010-10-03 CERDAN Yohann <cerdanyohann@yahoo.fr>
	* Initial release
